--- a/.github/workflows/parse-new-experience.yml
+++ b/.github/workflows/parse-new-experience.yml
@@ -43,6 +43,7 @@ jobs:
           delete-branch: true
           title: "Add experience ${{ steps.issue-parser.outputs.issueparser_title }}"
           body: "Based on issue #${{ github.event.issue.number }}"
+          labels: 'new-experience'
       - name: Comment on Issue
         run: gh issue comment "$NUMBER" --body "$BODY"
         env:
