--- a/.github/workflows/parse-new-experience.yml
+++ b/.github/workflows/parse-new-experience.yml
@@ -34,9 +34,27 @@ jobs:
           jq --arg file_size $file_size '.fileSize = ($file_size|tonumber)' "experiences/${{ env.experience_name }}/test-manifest.json" > temp.json && mv temp.json "experiences/${{ env.experience_name }}/test-manifest.json"
           rm -f temp.json
           echo "test-manifest=anytype://main/import/?type=experience&source=https%3A%2F%2Fgithub.com%2Fanyproto%2Fgallery%2Fraw%2F${{ env.experience_name }}%2Fexperiences%2F${{ env.experience_name }}%2Ftest-manifest.json" >> "$GITHUB_ENV"
+
+      - name: Download experience validator
+        run: |
+          git clone git@github.com:anyproto/anytype-heart.git
+          echo "Cloned"
+
+      - name: Install Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: '~1.20.8'
+        run: echo "Go installed"
+
+      - name: Build experience validator
+        run: |
+          cd anytype-heart/cmd/usecasevalidator
+          go build .
+          echo "Validator built"
+
       - name: Run experience validator
         run: |
-          ./cli/usecasevalidator -path experiences/${{ env.experience_name }}/${{ env.experience_name }}.zip -creator -r -validate -list
+          ./anytype-heart/cmd/usecasevalidator -path experiences/${{ env.experience_name }}/${{ env.experience_name }}.zip -creator -r -validate -list
           echo $?
           if [ 0 -eq 0 ]; then
             echo "WOW"
@@ -45,6 +63,12 @@ jobs:
             echo "Rewriting archive with the processed one"
             mv experiences/${{ env.experience_name }}/${{ env.experience_name }}_new.zip experiences/${{ env.experience_name }}/${{ env.experience_name }}.zip
           fi
+
+      - name: Remove validator
+        run: |
+          rm -rf anytype-heart/
+          echo "Anytype heart dir removed"
+
       - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v5
@@ -55,6 +79,7 @@ jobs:
           delete-branch: true
           title: "Add experience ${{ steps.issue-parser.outputs.issueparser_title }}"
           body: "Based on issue #${{ github.event.issue.number }}"
+
       - name: Comment on Issue
         run: gh issue comment "$NUMBER" --body "$BODY"
         env:
