Use https instead of git

--- a/.github/workflows/parse-new-experience.yml
+++ b/.github/workflows/parse-new-experience.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Download experience validator
         run: |
-          git clone git@github.com:anyproto/anytype-heart.git
+          git clone https://github.com/anyproto/anytype-heart.git
           echo "Cloned"
 
       - name: Install Go
