--- a/.github/workflows/parse-new-experience.yml
+++ b/.github/workflows/parse-new-experience.yml
@@ -85,14 +85,14 @@ jobs:
           git clone https://github.com/anyproto/anytype-heart.git
           cd anytype-heart/cmd/usecasevalidator
           go build .
-          ./usecasevalidator -path experiences/${{ env.experience_name }}/${{ env.experience_name }}.zip -creator -r -validate -list >> $validation_comment
+          validation_comment=$(./usecasevalidator -path experiences/${{ env.experience_name }}/${{ env.experience_name }}.zip -creator -r -validate -list)
           if [ $? -eq 0 ]; then
             echo "Rewriting archive with the processed one"
             echo "validation_error=false" >> "$GITHUB_ENV"
             mv experiences/${{ env.experience_name }}/${{ env.experience_name }}_new.zip experiences/${{ env.experience_name }}/${{ env.experience_name }}.zip
           else
             echo "validation_error=true" >> "$GITHUB_ENV"
-            echo "validation_comment="+$validation_comment >> "$GITHUB_ENV"
+            echo "validation_comment=${validation_comment}" >> "$GITHUB_ENV"
           fi
           rm -rf anytype-heart/
 
