--- a/.github/workflows/parse-new-experience.yml
+++ b/.github/workflows/parse-new-experience.yml
@@ -85,6 +85,7 @@ jobs:
           git clone https://github.com/anyproto/anytype-heart.git
           cd anytype-heart/cmd/usecasevalidator
           go build .
+          echo "Validator is built"
           validation_comment=$(./usecasevalidator -path experiences/${{ env.experience_name }}/${{ env.experience_name }}.zip -creator -r -validate -list)
           if [ $? -eq 0 ]; then
             echo "Rewriting archive with the processed one"
