Work in another dir

--- a/.github/workflows/parse-new-experience.yml
+++ b/.github/workflows/parse-new-experience.yml
@@ -88,12 +88,11 @@ jobs:
       - name: Run experience validator
         run: |
           git clone https://github.com/anyproto/anytype-heart.git
-          cd anytype-heart/cmd/usecasevalidator
-          go build .
+          go build anytype-heart/cmd/usecasevalidator
           echo "Validator is built"
-          ./usecasevalidator -path experiences/${{ env.experience_name }}/${{ env.experience_name }}.zip -creator -r -validate -list
+          ./anytype-heart/cmd/usecasevalidator/usecasevalidator -path experiences/${{ env.experience_name }}/${{ env.experience_name }}.zip -creator -r -validate -list
           echo "Validate #1"
-          validation_comment=$(./usecasevalidator -path experiences/${{ env.experience_name }}/${{ env.experience_name }}.zip -creator -r -validate -list)
+          validation_comment=$(./anytype-heart/cmd/usecasevalidator/usecasevalidator -path experiences/${{ env.experience_name }}/${{ env.experience_name }}.zip -creator -r -validate -list)
           if [ $? -eq 0 ]; then
             echo "Rewriting archive with the processed one"
             echo "validation_error=false" >> "$GITHUB_ENV"
@@ -102,7 +101,6 @@ jobs:
             echo "validation_error=true" >> "$GITHUB_ENV"
             echo "validation_comment=${validation_comment}" >> "$GITHUB_ENV"
           fi
-          cd ../../../
           rm -rf anytype-heart/
 
       - name: Comment and add label to issue
