--- a/.github/ISSUE_TEMPLATE/new_experience.yml
+++ b/.github/ISSUE_TEMPLATE/new_experience.yml
@@ -2,6 +2,17 @@ name: New Experience
 description: Upload a new Expirience to the Gallery
 labels: ["experience"]
 body:
+  - type: markdown
+    attributes:
+      value: |
+        > 1. Create a **new space** which includes _only_ the types, relations, widgets, templates, and objects you want to share. This will avoid accidental sharing of sensitive data from your primary space. Please note: the name and icon of this new space will be displayed for everyone who will install your ANY experience.
+        > 2. When the space is ready, export it in Any-Block JSON format. Click on the space name in the top-left corner, click “Export Space”, choose “Any-Block” option and set up following export settings:
+        >     - File format – JSON,
+        >     - Turn on “Zip archive”
+        >     - Turn on “Include files”
+        > 3. Make one or several screenshots which show important features of your ANY experience. Save these screenshots in .png format.
+        > 4. Fill the form below.
+        > 5. Someone from Open Any Team will review your submission, and, when approved, the experience will be published in the [Gallery](https://gallery.any.coop/). You will be recognized as a contributor in our [Github](https://github.com/anyproto/contributors) and on our [website](https://anytype.io/contributors).
   - type: textarea
     id: experience
     attributes:
@@ -14,6 +25,7 @@ body:
     attributes:
       label: Title
       description: The Experience title will be displayed in the Gallery.
+      placeholder: "Maximum length of 40 characters."
     validations:
       required: true
   - type: textarea
@@ -28,6 +40,7 @@ body:
     attributes:
       label: Description
       description: It helps people understand what the Experience provides. It will be displayed in the Gallery.
+      placeholder: "Maximum length of 260 characters."
     validations:
       required: true
   - type: dropdown
@@ -378,9 +391,9 @@ body:
       label: Terms
       description: You are contributing this Experience under the terms of the [MIT License](https://github.com/anyproto/gallery/blob/main/LICENSE.md).
       options:
-      - label: I agree that this Experience is licensed under the MIT License.
-        required: true
-      - label: I have intellectual property rights and/or permission to contribute the Experience and its content. 
-        required: true
-      - label: I confirm that the Experience does not contain any harmful or malicious content.
-        required: true
+        - label: I agree that this Experience is licensed under the MIT License.
+          required: true
+        - label: I have intellectual property rights and/or permission to contribute the Experience and its content.
+          required: true
+        - label: I confirm that the Experience does not contain any harmful or malicious content.
+          required: true
