--- a/.github/workflows/parse-new-experience.yml
+++ b/.github/workflows/parse-new-experience.yml
@@ -90,6 +90,7 @@ jobs:
           sudo apt install snapd
           sudo snap install pngquant
           echo "DUBUG!!!"
+          ls experiences
           ls experiences/${{ env.experience_name }}/screenshots/
           pngquant --force --ext=.png experiences/${{ env.experience_name }}/screenshots/*.png
           file_size=$(stat -c %s "experiences/${{ env.experience_name }}/${{ env.experience_name }}.zip")
