--- a/.github/workflows/parse-new-experience.yml
+++ b/.github/workflows/parse-new-experience.yml
@@ -80,6 +80,11 @@ jobs:
           echo "experience_name=$(echo '${{ steps.issue-parser.outputs.issueparser_title }}' | sed -e 's/[^[:alnum:]]/_/g' | tr -s '_' | tr A-Z a-z)" >> "$GITHUB_ENV"
           echo "id=$(uuidgen)" >> "$GITHUB_ENV"
 
+      - name: Add author, name and id to issue.json
+        if: ${{ env.zip_file_missing == 'false' && env.restrictions_exceeded == 'false' && env.incorrect_screen_format == 'false' }}
+        run: |
+          jq '. + {"author": "${{ github.event.issue.user.login }}", "name": "${{ env.experience_name }}", "id": "${{ env.id }}"}' issue.json > tmp && mv tmp issue.json
+
       - name: Build manifest
         id: manifest-builder
         if: ${{ env.zip_file_missing == 'false' && env.restrictions_exceeded == 'false' && env.incorrect_screen_format == 'false' }}
@@ -89,9 +94,6 @@ jobs:
           sudo apt update
           sudo apt install snapd
           sudo snap install pngquant
-          echo "DUBUG!!!"
-          ls experiences
-          ls experiences/${{ env.experience_name }}/screenshots/
           pngquant --force --ext=.png experiences/${{ env.experience_name }}/screenshots/*.png
           file_size=$(stat -c %s "experiences/${{ env.experience_name }}/${{ env.experience_name }}.zip")
           jq --arg file_size $file_size '.fileSize = ($file_size|tonumber)' "experiences/${{ env.experience_name }}/manifest.json" > temp.json && mv temp.json "experiences/${{ env.experience_name }}/manifest.json"
@@ -151,11 +153,6 @@ jobs:
           GH_REPO: ${{ github.repository }}
           NUMBER: ${{ github.event.issue.number }}
           LABELS: changes_requested
-
-      - name: Add author, name and id to issue.json
-        if: ${{ env.zip_file_missing == 'false' && env.restrictions_exceeded == 'false' && env.incorrect_screen_format == 'false' && env.validation_error == 'false' }}
-        run: |
-          jq '. + {"author": "${{ github.event.issue.user.login }}", "name": "${{ env.experience_name }}", "id": "${{ env.id }}"}' issue.json > tmp && mv tmp issue.json
 
       - name: Create Pull Request
         id: cpr
