--- a/.github/workflows/parse-new-experience.yml
+++ b/.github/workflows/parse-new-experience.yml
@@ -129,6 +129,9 @@ jobs:
           fi
           rm -rf ../../../anytype-heart/
           validation_comment=$(echo "<details><summary>Expand to see validator output</summary>${validation_output}</details>") >> "$GITHUB_OUTPUT"
+          echo $validation_comment
+          echo "${{ steps.experience-validator.outputs.validation_comment }}"
+          
 
       - name: Comment and add label to issue
         if: ${{ env.zip_file_missing == 'true' || env.restrictions_exceeded == 'true' || env.incorrect_screen_format == 'true' || env.validation_error == 'true' }}
