Add the very comment

--- a/.github/workflows/parse-new-experience.yml
+++ b/.github/workflows/parse-new-experience.yml
@@ -128,7 +128,7 @@ jobs:
             rm -rf ../../../experiences/${{ env.experience_name }}/
           fi
           rm -rf ../../../anytype-heart/
-          validation_comment=$(echo "<details><summary>Expand to see validator output</summary>${validation_output}</details>") 
+          validation_comment=$(echo "validation_comment=<details><summary>Expand to see validator output</summary>${validation_output}</details>") 
           echo $validation_comment >> "$GITHUB_OUTPUT"
           echo "${{ steps.experience-validator.outputs.validation_comment }}"
           
