--- a/.github/workflows/parse-new-experience.yml
+++ b/.github/workflows/parse-new-experience.yml
@@ -109,14 +109,15 @@ jobs:
 
       - name: Download validator
         if: ${{ env.zip_file_missing == 'false' && env.restrictions_exceeded == 'false' && env.incorrect_screen_format == 'false' }}
-        run: |
-          make download-tantivy
-
-      - name: Download libs for validator build
-        if: ${{ env.zip_file_missing == 'false' && env.restrictions_exceeded == 'false' && env.incorrect_screen_format == 'false' }}
+        uses: actions/checkout@v4
         with:
           repository: anyproto/anytype-heart
           path: anytype-heart
+          
+      - name: Download libs for validator build
+        if: ${{ env.zip_file_missing == 'false' && env.restrictions_exceeded == 'false' && env.incorrect_screen_format == 'false' }}
+        run: |
+          make download-tantivy
 
       - name: Run experience validator
         id: experience-validator
